--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,79 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="albertodimartino.com.popularmovies.MovieDetailActivity">
+<ScrollView android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/poster_image_view"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:contentDescription="@string/poster_image_description"
-        android:layout_centerHorizontal="true"
-        android:padding="6dp"/>
-
-    <TextView
-        android:id="@+id/movie_title_label_text_view"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/movie_title_label"
-        android:layout_below="@id/poster_image_view"/>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="albertodimartino.com.popularmovies.MovieDetailActivity">
 
-    <TextView
-        android:id="@+id/movie_title_title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/movie_title_label_text_view"
-        android:layout_below="@id/poster_image_view"/>
+        <ImageView
+            android:id="@+id/poster_image_view"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            android:contentDescription="@string/poster_image_description"
+            android:layout_centerHorizontal="true"
+            android:padding="6dp"/>
 
-    <TextView
-        android:id="@+id/movie_release_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/release_date_label"
-        android:layout_below="@id/movie_title_label_text_view"/>
+        <TextView
+            android:id="@+id/movie_title_label_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/movie_title_label"
+            android:layout_below="@id/poster_image_view"/>
 
-    <TextView
-        android:id="@+id/movie_release_title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/movie_release_label_text_view"
-        android:layout_below="@id/movie_title_title_text_view"/>
+        <TextView
+            android:id="@+id/movie_title_title_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/movie_title_label_text_view"
+            android:layout_below="@id/poster_image_view"/>
 
-    <TextView
-        android:id="@+id/movie_average_rating_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/average_rating_label"
-        android:layout_below="@id/movie_release_label_text_view"/>
+        <TextView
+            android:id="@+id/movie_release_label_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/release_date_label"
+            android:layout_below="@id/movie_title_label_text_view"/>
 
-    <TextView
-        android:id="@+id/movie_average_rating_title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/movie_average_rating_label_text_view"
-        android:layout_below="@id/movie_release_title_text_view"/>
+        <TextView
+            android:id="@+id/movie_release_title_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/movie_release_label_text_view"
+            android:layout_below="@id/movie_title_title_text_view"/>
 
-    <TextView
-        android:id="@+id/movie_overview_label_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/overview_label"
-        android:layout_below="@id/movie_average_rating_label_text_view"/>
+        <TextView
+            android:id="@+id/movie_average_rating_label_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/average_rating_label"
+            android:layout_below="@id/movie_release_label_text_view"/>
 
-    <TextView
-        android:id="@+id/movie_overview_title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/movie_overview_label_text_view"
-        android:layout_below="@id/movie_average_rating_title_text_view"
-        android:scrollbars="vertical"/>
+        <TextView
+            android:id="@+id/movie_average_rating_title_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/movie_average_rating_label_text_view"
+            android:layout_below="@id/movie_release_title_text_view"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/movie_overview_label_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/overview_label"
+            android:layout_below="@id/movie_average_rating_label_text_view"/>
+
+        <TextView
+            android:id="@+id/movie_overview_title_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/movie_overview_label_text_view"
+            android:layout_below="@id/movie_average_rating_title_text_view"/>
+
+    </RelativeLayout>
+
+
+</ScrollView>
