--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#f0f0f0">
-
-    <GridView android:id="@+id/gridview"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:columnWidth="180dp"
-              android:numColumns="auto_fit"
-              android:verticalSpacing="2dp"
-              android:horizontalSpacing="0dp"
-              android:stretchMode="columnWidth"
-              android:gravity="center"
-              android:paddingTop="3dp"/>
-</RelativeLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
+          android:id="@+id/fragment_movies"
+          android:name="albertodimartino.com.popularmovies.MoviesFragment"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          tools:context="albertodimartino.com.popularmovies.MoviesFragment"/>
