--- a/app/src/main/res/layout/movie_detail_fragment.xml
+++ b/app/src/main/res/layout/movie_detail_fragment.xml
@@ -1,99 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="albertodimartino.com.popularmovies.MovieDetailActivity">
+
+    <ImageView
+        android:id="@+id/poster_image_view"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:contentDescription="@string/poster_image_description"
+        android:layout_centerHorizontal="true"
+        android:padding="6dp"/>
+
+    <TextView
+        android:id="@+id/movie_title_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/movie_title_label"
+        android:layout_below="@id/poster_image_view"/>
+
+    <TextView
+        android:id="@+id/movie_title_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/movie_title_label_text_view"
+        android:layout_below="@id/poster_image_view"/>
+
+    <TextView
+        android:id="@+id/movie_release_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/release_date_label"
+        android:layout_below="@id/movie_title_label_text_view"/>
+
+    <TextView
+        android:id="@+id/movie_release_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/movie_release_label_text_view"
+        android:layout_below="@id/movie_title_title_text_view"/>
+
+    <TextView
+        android:id="@+id/movie_average_rating_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/average_rating_label"
+        android:layout_below="@id/movie_release_label_text_view"/>
+
+    <TextView
+        android:id="@+id/movie_average_rating_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/movie_average_rating_label_text_view"
+        android:layout_below="@id/movie_release_title_text_view"/>
+
+    <TextView
+        android:id="@+id/movie_overview_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/overview_label"
+        android:layout_below="@id/movie_average_rating_label_text_view"/>
+
+    <TextView
+        android:id="@+id/movie_overview_title_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/movie_overview_label_text_view"
+        android:layout_below="@id/movie_average_rating_title_text_view"/>
+
+    <Button
+        android:id="@+id/youtube_button"
+        android:enabled="false"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Video Youtube"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_below="@id/movie_overview_title_text_view"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:id="@+id/review_text_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="albertodimartino.com.popularmovies.MovieDetailActivity">
+        android:text="@string/string_reviews_text_label"
+        android:layout_below="@id/youtube_button"
+        android:layout_marginTop="15dp"/>
 
-        <ImageView
-            android:id="@+id/poster_image_view"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:contentDescription="@string/poster_image_description"
-            android:layout_centerHorizontal="true"
-            android:padding="6dp"/>
+    <ListView
+        android:id="@+id/trailers_listView"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/review_text_label"
+        android:layout_centerHorizontal="true"/>
 
-        <TextView
-            android:id="@+id/movie_title_label_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/movie_title_label"
-            android:layout_below="@id/poster_image_view"/>
-
-        <TextView
-            android:id="@+id/movie_title_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/movie_title_label_text_view"
-            android:layout_below="@id/poster_image_view"/>
-
-        <TextView
-            android:id="@+id/movie_release_label_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/release_date_label"
-            android:layout_below="@id/movie_title_label_text_view"/>
-
-        <TextView
-            android:id="@+id/movie_release_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/movie_release_label_text_view"
-            android:layout_below="@id/movie_title_title_text_view"/>
-
-        <TextView
-            android:id="@+id/movie_average_rating_label_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/average_rating_label"
-            android:layout_below="@id/movie_release_label_text_view"/>
-
-        <TextView
-            android:id="@+id/movie_average_rating_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/movie_average_rating_label_text_view"
-            android:layout_below="@id/movie_release_title_text_view"/>
-
-        <TextView
-            android:id="@+id/movie_overview_label_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/overview_label"
-            android:layout_below="@id/movie_average_rating_label_text_view"/>
-
-        <TextView
-            android:id="@+id/movie_overview_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/movie_overview_label_text_view"
-            android:layout_below="@id/movie_average_rating_title_text_view"/>
-
-        <android.support.v7.widget.ListViewCompat
-            android:id="@+id/trailers_listView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/youtube_button"
-            android:enabled="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Video Youtube"
-            android:backgroundTint="@color/colorPrimary"
-            android:layout_below="@id/movie_overview_title_text_view"/>
-
-    </RelativeLayout>
+</RelativeLayout>
 
 
-</ScrollView>
